<resources>
    <string name="app_name">Go For Trip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diag_total_price_tv_default">Total Price : 0 tk</string>
    <string name="enter_your_name">Enter Your Name …</string>
    <string name="enter_email_address">Enter Email Address …</string>
    <string name="enter_a_password">Enter A Password …</string>
    <string name="confirm_your_password">Confirm Your Password …</string>
    <string name="enter_your_phone_number">Enter Your Phone Number …</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here.</string>
    <string name="enter_password">Enter Password ...</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_any_account_sign_up_here">Don\'t have any account? Sign up here.</string>
    <string name="go">Go</string>
    <string name="trip">Trip</string>
    <string name="best_service">Best Service .</string>
    <string name="least_price">Least Price</string>
    <string name="already_have_a_account_sign_in_here">Already have a account ? Sign in here.</string>
    <string name="register_now">Register Now</string>
    <string name="amount_of_passenger">Amount Of Passenger</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="enter_package_name">Enter Package Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_departure_location">Enter Departure Location</string>
    <string name="enter_price">Enter Price</string>
    <string name="total_seat">Total Seat</string>
    <string name="add_image">Add Image</string>
    <string name="enter_package_description">Enter Package Description...</string>
    <string name="add_package">Add Package</string>
    <string name="price">Price :</string>
    <string name="total_ratings">Total Ratings</string>
    <string name="total_bookings">Total Bookings</string>
    <string name="seat_left">Seat Left</string>
    <string name="book_now">Book Now</string>
    <string name="about_this_package">About This Package</string>
    <string name="click_here_to_expand">Click here to expand</string>
    <string name="departure_location">Departure Location</string>
    <string name="destination">Destination</string>
    <string name="departure_time">Departure Time</string>
    <string name="review_and_ratings">Review And Ratings</string>
    <string name="add_a_review">Add a review</string>
    <string name="optional_write_a_review">(Optional) Write A Review...</string>
    <string name="submit">Submit</string>
</resources>