<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_200"
        tools:context=".activities.SignInActivity">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:fontFamily="@font/goldman_bold"
            android:gravity="center"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            app:layout_constraintBottom_toTopOf="@+id/pass_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/pass_et"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:fontFamily="@font/goldman_bold"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_btn"
            app:layout_constraintEnd_toEndOf="@+id/email_et"
            app:layout_constraintStart_toStartOf="@+id/email_et"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/goldman_bold"
            android:paddingTop="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/goto_sign_up_tv"
            app:layout_constraintEnd_toEndOf="@+id/pass_et"
            app:layout_constraintStart_toStartOf="@+id/pass_et"
            app:layout_constraintTop_toBottomOf="@+id/pass_et" />

        <TextView
            android:id="@+id/goto_sign_up_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/goldman_bold"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/don_t_have_any_account_sign_up_here"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/pass_et"
            app:layout_constraintStart_toStartOf="@+id/pass_et"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
