<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RatingBar
            android:id="@+id/rev_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:numStars="5"
            android:stepSize="1"
            android:progressTint="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
            app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:rating="3" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/et_bg"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/rev_back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rev_rating_bar">

            <EditText
                android:id="@+id/rev_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/optional_write_a_review"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:autofillHints="" />
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rev_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/submit"
            app:icon="@drawable/ic_send"
            android:backgroundTint="@color/teal_700"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="@+id/rev_back_btn"
            app:layout_constraintEnd_toStartOf="@+id/rev_back_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
            app:layout_constraintTop_toTopOf="@+id/rev_back_btn" />

        <Button
            android:id="@+id/rev_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rev_submit_btn"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
